--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,3 +13,4 @@ env_logger = "0.10.0"
 diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
 dotenvy = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
+scanf = "*"
